- pruned unnecessary methods